// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebarSidebar dont show hidden boards 1`] = `
<div>
  <div
    class="Sidebar octo-sidebar"
  >
    <div
      class="octo-sidebar-header"
    >
      <div
        class="heading"
      >
        <div
          class="SidebarUserMenu"
        >
          <div
            class="ModalWrapper"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="logo"
              >
                <div
                  class="logo-title"
                >
                  <svg
                    class="FocalboardLogoIcon Icon"
                    version="1.1"
                    viewBox="0 0 52.589677 64"
                    x="0px"
                    y="0px"
                  >
                    <path
                      d="m 33.071077,12.069805 c -12.663,-3.4670001 -27.0530002,3.289 -31.6760002,16.943 -4.655,13.75 2.719,28.67 16.4690002,33.325 13.75,4.655 28.67,-2.719 33.326,-16.469 3.804,-11.235 -0.462,-22.701 -8.976,-29.249 l -0.46,4.871 h -0.001 c 4.631,4.896 6.709,11.941 4.325,18.985 -3.362,9.931 -14.447,15.151 -24.76,11.66 -10.313,-3.49 -15.9480002,-14.37 -12.5870002,-24.301 2.9750002,-8.788 11.9980002,-13.715 20.7430002,-12.625 v -10e-4 z m -6.175,16.488 c 3.456,-0.665 6.986,2.754 5.762,6.37 -0.854,2.522 -3.67,3.85 -6.291,2.962 -2.62,-0.887 -4.052,-3.651 -3.197,-6.174 0.573,-1.697 2.034,-2.852 3.726,-3.158 z m -1.285,-4.944 c -1.786,0.323 -3.45,1.104 -4.812,2.258 -1.299,1.101 -2.319,2.545 -2.898,4.258 -0.879,2.597 -0.579,5.323 0.617,7.632 1.206,2.329 3.325,4.234 6.07,5.164 2.744,0.929 5.584,0.701 7.959,-0.417 2.352,-1.107 4.246,-3.091 5.125,-5.688 0.555,-1.639 0.633,-3.254 0.344,-4.761 -0.21,-1.093 -0.615,-2.134 -1.174,-3.091 l 1.019,-5.107 c 0.189,0.187 0.374,0.378 0.552,0.574 1.75,1.919 3.008,4.283 3.508,6.877 0.415,2.154 0.304,4.457 -0.484,6.784 -1.239,3.661 -3.898,6.453 -7.193,8.005 -3.273,1.541 -7.175,1.858 -10.93,0.588 -3.754,-1.271 -6.661,-3.895 -8.326,-7.108 -1.674,-3.233 -2.09,-7.065 -0.851,-10.728 0.819,-2.419 2.26,-4.46 4.097,-6.016 1.88,-1.593 4.181,-2.673 6.656,-3.125 l -0.001,-0.004 c 1.759,-0.339 3.522,-0.313 5.213,0.016 l -3.583,3.761 c -0.294,0.028 -0.588,0.071 -0.883,0.127 h -0.025 z"
                    />
                    <polygon
                      points="26.057,32.594 37.495,11.658 36.79,8.44 41.066,0.207 43.683,4.611 48.803,4.434 44.185,12.48 40.902,13.697 29.542,34.491 "
                      transform="translate(7.6780426e-5,-0.21919512)"
                    />
                  </svg>
                  <span>
                    Focalboard
                  </span>
                  <div
                    class="versionFrame"
                  >
                    <div
                      class="version"
                      title="v8.0.0"
                    >
                      v8.0.0
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-spacer"
      />
      <div
        class="sidebarSwitcher"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="HideSidebarIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="80,20 50,50 80,80"
            />
            <polyline
              points="50,20 20,50, 50,80"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="WorkspaceTitle"
    />
    <div
      class="BoardsSwitcherWrapper"
    >
      <div
        class="BoardsSwitcher"
      >
        <i
          class="CompassIcon icon-magnify MagnifyIcon"
        />
        <div>
          <span>
            Find Boards
          </span>
        </div>
      </div>
    </div>
    <div
      class="octo-sidebar-list"
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="lhs-categories"
    >
      <div
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="category1"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="2"
            data-rbd-droppable-id="category1"
          >
            <div
              class="octo-sidebar-item category expanded "
            >
              <div
                aria-describedby="rbd-hidden-text-2-hidden-text-10"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="2"
                data-rbd-drag-handle-draggable-id="category1"
                draggable="false"
                role="button"
                tabindex="0"
                title="Category 1"
              >
                <i
                  class="CompassIcon icon-chevron-down ChevronDownIcon"
                />
                Category 1
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div>
              <div
                class="octo-sidebar-item subitem no-views"
              >
                No boards inside
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="add-board"
    >
      + Add board
    </div>
    <div
      class="SidebarSettingsMenu"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="menu-entry"
        >
          Settings
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarSidebar should assign default category if current board doesnt have a category 1`] = `
<div>
  <div
    class="Sidebar octo-sidebar"
  >
    <div
      class="octo-sidebar-header"
    >
      <div
        class="heading"
      >
        <div
          class="SidebarUserMenu"
        >
          <div
            class="ModalWrapper"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="logo"
              >
                <div
                  class="logo-title"
                >
                  <svg
                    class="FocalboardLogoIcon Icon"
                    version="1.1"
                    viewBox="0 0 52.589677 64"
                    x="0px"
                    y="0px"
                  >
                    <path
                      d="m 33.071077,12.069805 c -12.663,-3.4670001 -27.0530002,3.289 -31.6760002,16.943 -4.655,13.75 2.719,28.67 16.4690002,33.325 13.75,4.655 28.67,-2.719 33.326,-16.469 3.804,-11.235 -0.462,-22.701 -8.976,-29.249 l -0.46,4.871 h -0.001 c 4.631,4.896 6.709,11.941 4.325,18.985 -3.362,9.931 -14.447,15.151 -24.76,11.66 -10.313,-3.49 -15.9480002,-14.37 -12.5870002,-24.301 2.9750002,-8.788 11.9980002,-13.715 20.7430002,-12.625 v -10e-4 z m -6.175,16.488 c 3.456,-0.665 6.986,2.754 5.762,6.37 -0.854,2.522 -3.67,3.85 -6.291,2.962 -2.62,-0.887 -4.052,-3.651 -3.197,-6.174 0.573,-1.697 2.034,-2.852 3.726,-3.158 z m -1.285,-4.944 c -1.786,0.323 -3.45,1.104 -4.812,2.258 -1.299,1.101 -2.319,2.545 -2.898,4.258 -0.879,2.597 -0.579,5.323 0.617,7.632 1.206,2.329 3.325,4.234 6.07,5.164 2.744,0.929 5.584,0.701 7.959,-0.417 2.352,-1.107 4.246,-3.091 5.125,-5.688 0.555,-1.639 0.633,-3.254 0.344,-4.761 -0.21,-1.093 -0.615,-2.134 -1.174,-3.091 l 1.019,-5.107 c 0.189,0.187 0.374,0.378 0.552,0.574 1.75,1.919 3.008,4.283 3.508,6.877 0.415,2.154 0.304,4.457 -0.484,6.784 -1.239,3.661 -3.898,6.453 -7.193,8.005 -3.273,1.541 -7.175,1.858 -10.93,0.588 -3.754,-1.271 -6.661,-3.895 -8.326,-7.108 -1.674,-3.233 -2.09,-7.065 -0.851,-10.728 0.819,-2.419 2.26,-4.46 4.097,-6.016 1.88,-1.593 4.181,-2.673 6.656,-3.125 l -0.001,-0.004 c 1.759,-0.339 3.522,-0.313 5.213,0.016 l -3.583,3.761 c -0.294,0.028 -0.588,0.071 -0.883,0.127 h -0.025 z"
                    />
                    <polygon
                      points="26.057,32.594 37.495,11.658 36.79,8.44 41.066,0.207 43.683,4.611 48.803,4.434 44.185,12.48 40.902,13.697 29.542,34.491 "
                      transform="translate(7.6780426e-5,-0.21919512)"
                    />
                  </svg>
                  <span>
                    Focalboard
                  </span>
                  <div
                    class="versionFrame"
                  >
                    <div
                      class="version"
                      title="v8.0.0"
                    >
                      v8.0.0
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-spacer"
      />
      <div
        class="sidebarSwitcher"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="HideSidebarIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="80,20 50,50 80,80"
            />
            <polyline
              points="50,20 20,50, 50,80"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="WorkspaceTitle"
    />
    <div
      class="BoardsSwitcherWrapper"
    >
      <div
        class="BoardsSwitcher"
      >
        <i
          class="CompassIcon icon-magnify MagnifyIcon"
        />
        <div>
          <span>
            Find Boards
          </span>
        </div>
      </div>
    </div>
    <div
      class="octo-sidebar-list"
      data-rbd-droppable-context-id="4"
      data-rbd-droppable-id="lhs-categories"
    >
      <div
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="category1"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="4"
            data-rbd-droppable-id="category1"
          >
            <div
              class="octo-sidebar-item category expanded "
            >
              <div
                aria-describedby="rbd-hidden-text-4-hidden-text-21"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="4"
                data-rbd-drag-handle-draggable-id="category1"
                draggable="false"
                role="button"
                tabindex="0"
                title="Category 1"
              >
                <i
                  class="CompassIcon icon-chevron-down ChevronDownIcon"
                />
                Category 1
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-rbd-draggable-context-id="4"
        data-rbd-draggable-id="default_category"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="4"
            data-rbd-droppable-id="default_category"
          >
            <div
              class="octo-sidebar-item category expanded "
            >
              <div
                aria-describedby="rbd-hidden-text-4-hidden-text-21"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="4"
                data-rbd-drag-handle-draggable-id="default_category"
                draggable="false"
                role="button"
                tabindex="0"
                title="Boards"
              >
                <i
                  class="CompassIcon icon-chevron-down ChevronDownIcon"
                />
                Boards
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div>
              <div
                class="octo-sidebar-item subitem no-views"
              >
                No boards inside
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="add-board"
    >
      + Add board
    </div>
    <div
      class="SidebarSettingsMenu"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="menu-entry"
        >
          Settings
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarSidebar shouldnt do any category assignment is board is in a category 1`] = `
<div>
  <div
    class="Sidebar octo-sidebar"
  >
    <div
      class="octo-sidebar-header"
    >
      <div
        class="heading"
      >
        <div
          class="SidebarUserMenu"
        >
          <div
            class="ModalWrapper"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="logo"
              >
                <div
                  class="logo-title"
                >
                  <svg
                    class="FocalboardLogoIcon Icon"
                    version="1.1"
                    viewBox="0 0 52.589677 64"
                    x="0px"
                    y="0px"
                  >
                    <path
                      d="m 33.071077,12.069805 c -12.663,-3.4670001 -27.0530002,3.289 -31.6760002,16.943 -4.655,13.75 2.719,28.67 16.4690002,33.325 13.75,4.655 28.67,-2.719 33.326,-16.469 3.804,-11.235 -0.462,-22.701 -8.976,-29.249 l -0.46,4.871 h -0.001 c 4.631,4.896 6.709,11.941 4.325,18.985 -3.362,9.931 -14.447,15.151 -24.76,11.66 -10.313,-3.49 -15.9480002,-14.37 -12.5870002,-24.301 2.9750002,-8.788 11.9980002,-13.715 20.7430002,-12.625 v -10e-4 z m -6.175,16.488 c 3.456,-0.665 6.986,2.754 5.762,6.37 -0.854,2.522 -3.67,3.85 -6.291,2.962 -2.62,-0.887 -4.052,-3.651 -3.197,-6.174 0.573,-1.697 2.034,-2.852 3.726,-3.158 z m -1.285,-4.944 c -1.786,0.323 -3.45,1.104 -4.812,2.258 -1.299,1.101 -2.319,2.545 -2.898,4.258 -0.879,2.597 -0.579,5.323 0.617,7.632 1.206,2.329 3.325,4.234 6.07,5.164 2.744,0.929 5.584,0.701 7.959,-0.417 2.352,-1.107 4.246,-3.091 5.125,-5.688 0.555,-1.639 0.633,-3.254 0.344,-4.761 -0.21,-1.093 -0.615,-2.134 -1.174,-3.091 l 1.019,-5.107 c 0.189,0.187 0.374,0.378 0.552,0.574 1.75,1.919 3.008,4.283 3.508,6.877 0.415,2.154 0.304,4.457 -0.484,6.784 -1.239,3.661 -3.898,6.453 -7.193,8.005 -3.273,1.541 -7.175,1.858 -10.93,0.588 -3.754,-1.271 -6.661,-3.895 -8.326,-7.108 -1.674,-3.233 -2.09,-7.065 -0.851,-10.728 0.819,-2.419 2.26,-4.46 4.097,-6.016 1.88,-1.593 4.181,-2.673 6.656,-3.125 l -0.001,-0.004 c 1.759,-0.339 3.522,-0.313 5.213,0.016 l -3.583,3.761 c -0.294,0.028 -0.588,0.071 -0.883,0.127 h -0.025 z"
                    />
                    <polygon
                      points="26.057,32.594 37.495,11.658 36.79,8.44 41.066,0.207 43.683,4.611 48.803,4.434 44.185,12.48 40.902,13.697 29.542,34.491 "
                      transform="translate(7.6780426e-5,-0.21919512)"
                    />
                  </svg>
                  <span>
                    Focalboard
                  </span>
                  <div
                    class="versionFrame"
                  >
                    <div
                      class="version"
                      title="v8.0.0"
                    >
                      v8.0.0
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-spacer"
      />
      <div
        class="sidebarSwitcher"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="HideSidebarIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="80,20 50,50 80,80"
            />
            <polyline
              points="50,20 20,50, 50,80"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="WorkspaceTitle"
    />
    <div
      class="BoardsSwitcherWrapper"
    >
      <div
        class="BoardsSwitcher"
      >
        <i
          class="CompassIcon icon-magnify MagnifyIcon"
        />
        <div>
          <span>
            Find Boards
          </span>
        </div>
      </div>
    </div>
    <div
      class="octo-sidebar-list"
      data-rbd-droppable-context-id="5"
      data-rbd-droppable-id="lhs-categories"
    >
      <div
        data-rbd-draggable-context-id="5"
        data-rbd-draggable-id="category1"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="5"
            data-rbd-droppable-id="category1"
          >
            <div
              class="octo-sidebar-item category expanded "
            >
              <div
                aria-describedby="rbd-hidden-text-5-hidden-text-27"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="5"
                data-rbd-drag-handle-draggable-id="category1"
                draggable="false"
                role="button"
                tabindex="0"
                title="Category 1"
              >
                <i
                  class="CompassIcon icon-chevron-down ChevronDownIcon"
                />
                Category 1
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-rbd-draggable-context-id="5"
        data-rbd-draggable-id="category2"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="5"
            data-rbd-droppable-id="category2"
          >
            <div
              class="octo-sidebar-item category expanded "
            >
              <div
                aria-describedby="rbd-hidden-text-5-hidden-text-27"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="5"
                data-rbd-drag-handle-draggable-id="category2"
                draggable="false"
                role="button"
                tabindex="0"
                title="Category 2"
              >
                <i
                  class="CompassIcon icon-chevron-down ChevronDownIcon"
                />
                Category 2
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              data-rbd-draggable-context-id="5"
              data-rbd-draggable-id="board2"
            >
              <div
                aria-describedby="rbd-hidden-text-5-hidden-text-27"
                class="SidebarBoardItem subitem "
                data-rbd-drag-handle-context-id="5"
                data-rbd-drag-handle-draggable-id="board2"
                draggable="false"
                role="button"
                tabindex="0"
              >
                <div
                  class="octo-sidebar-icon"
                >
                  i
                </div>
                <div
                  class="octo-sidebar-title"
                  title="board title"
                >
                  board title
                </div>
                <div>
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper x"
                    role="button"
                  >
                    <button
                      class="IconButton"
                      type="button"
                    >
                      <i
                        class="CompassIcon icon-dots-horizontal OptionsIcon"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-rbd-draggable-context-id="5"
        data-rbd-draggable-id="default_category"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="5"
            data-rbd-droppable-id="default_category"
          >
            <div
              class="octo-sidebar-item category expanded "
            >
              <div
                aria-describedby="rbd-hidden-text-5-hidden-text-27"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="5"
                data-rbd-drag-handle-draggable-id="default_category"
                draggable="false"
                role="button"
                tabindex="0"
                title="Boards"
              >
                <i
                  class="CompassIcon icon-chevron-down ChevronDownIcon"
                />
                Boards
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div>
              <div
                class="octo-sidebar-item subitem no-views"
              >
                No boards inside
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="add-board"
    >
      + Add board
    </div>
    <div
      class="SidebarSettingsMenu"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="menu-entry"
        >
          Settings
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarSidebar sidebar expect hidden 1`] = `
<div>
  <div
    class="Sidebar octo-sidebar hidden"
  >
    <div
      class="octo-sidebar-header show-button"
    >
      <div
        class="hamburger-icon"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="HamburgerIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="20,25 80,25"
            />
            <polyline
              points="20,50 80,50"
            />
            <polyline
              points="20,75 80,75"
            />
          </svg>
        </button>
      </div>
      <div
        class="show-icon"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="ShowSidebarIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="20,20 50,50 20,80"
            />
            <polyline
              points="50,20 80,50, 50,80"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarSidebar sidebar hidden 1`] = `
<div>
  <div
    class="Sidebar octo-sidebar"
  >
    <div
      class="octo-sidebar-header"
    >
      <div
        class="heading"
      >
        <div
          class="SidebarUserMenu"
        >
          <div
            class="ModalWrapper"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="logo"
              >
                <div
                  class="logo-title"
                >
                  <svg
                    class="FocalboardLogoIcon Icon"
                    version="1.1"
                    viewBox="0 0 52.589677 64"
                    x="0px"
                    y="0px"
                  >
                    <path
                      d="m 33.071077,12.069805 c -12.663,-3.4670001 -27.0530002,3.289 -31.6760002,16.943 -4.655,13.75 2.719,28.67 16.4690002,33.325 13.75,4.655 28.67,-2.719 33.326,-16.469 3.804,-11.235 -0.462,-22.701 -8.976,-29.249 l -0.46,4.871 h -0.001 c 4.631,4.896 6.709,11.941 4.325,18.985 -3.362,9.931 -14.447,15.151 -24.76,11.66 -10.313,-3.49 -15.9480002,-14.37 -12.5870002,-24.301 2.9750002,-8.788 11.9980002,-13.715 20.7430002,-12.625 v -10e-4 z m -6.175,16.488 c 3.456,-0.665 6.986,2.754 5.762,6.37 -0.854,2.522 -3.67,3.85 -6.291,2.962 -2.62,-0.887 -4.052,-3.651 -3.197,-6.174 0.573,-1.697 2.034,-2.852 3.726,-3.158 z m -1.285,-4.944 c -1.786,0.323 -3.45,1.104 -4.812,2.258 -1.299,1.101 -2.319,2.545 -2.898,4.258 -0.879,2.597 -0.579,5.323 0.617,7.632 1.206,2.329 3.325,4.234 6.07,5.164 2.744,0.929 5.584,0.701 7.959,-0.417 2.352,-1.107 4.246,-3.091 5.125,-5.688 0.555,-1.639 0.633,-3.254 0.344,-4.761 -0.21,-1.093 -0.615,-2.134 -1.174,-3.091 l 1.019,-5.107 c 0.189,0.187 0.374,0.378 0.552,0.574 1.75,1.919 3.008,4.283 3.508,6.877 0.415,2.154 0.304,4.457 -0.484,6.784 -1.239,3.661 -3.898,6.453 -7.193,8.005 -3.273,1.541 -7.175,1.858 -10.93,0.588 -3.754,-1.271 -6.661,-3.895 -8.326,-7.108 -1.674,-3.233 -2.09,-7.065 -0.851,-10.728 0.819,-2.419 2.26,-4.46 4.097,-6.016 1.88,-1.593 4.181,-2.673 6.656,-3.125 l -0.001,-0.004 c 1.759,-0.339 3.522,-0.313 5.213,0.016 l -3.583,3.761 c -0.294,0.028 -0.588,0.071 -0.883,0.127 h -0.025 z"
                    />
                    <polygon
                      points="26.057,32.594 37.495,11.658 36.79,8.44 41.066,0.207 43.683,4.611 48.803,4.434 44.185,12.48 40.902,13.697 29.542,34.491 "
                      transform="translate(7.6780426e-5,-0.21919512)"
                    />
                  </svg>
                  <span>
                    Focalboard
                  </span>
                  <div
                    class="versionFrame"
                  >
                    <div
                      class="version"
                      title="v8.0.0"
                    >
                      v8.0.0
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-spacer"
      />
      <div
        class="sidebarSwitcher"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="HideSidebarIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="80,20 50,50 80,80"
            />
            <polyline
              points="50,20 20,50, 50,80"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="WorkspaceTitle"
    />
    <div
      class="BoardsSwitcherWrapper"
    >
      <div
        class="BoardsSwitcher"
      >
        <i
          class="CompassIcon icon-magnify MagnifyIcon"
        />
        <div>
          <span>
            Find Boards
          </span>
        </div>
      </div>
    </div>
    <div
      class="octo-sidebar-list"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="lhs-categories"
    >
      <div
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="category1"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="0"
            data-rbd-droppable-id="category1"
          >
            <div
              class="octo-sidebar-item category expanded "
            >
              <div
                aria-describedby="rbd-hidden-text-0-hidden-text-0"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="0"
                data-rbd-drag-handle-draggable-id="category1"
                draggable="false"
                role="button"
                tabindex="0"
                title="Category 1"
              >
                <i
                  class="CompassIcon icon-chevron-down ChevronDownIcon"
                />
                Category 1
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="board1"
            >
              <div
                aria-describedby="rbd-hidden-text-0-hidden-text-0"
                class="SidebarBoardItem subitem "
                data-rbd-drag-handle-context-id="0"
                data-rbd-drag-handle-draggable-id="board1"
                draggable="false"
                role="button"
                tabindex="0"
              >
                <div
                  class="octo-sidebar-icon"
                >
                  i
                </div>
                <div
                  class="octo-sidebar-title"
                  title="board title"
                >
                  board title
                </div>
                <div>
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper x"
                    role="button"
                  >
                    <button
                      class="IconButton"
                      type="button"
                    >
                      <i
                        class="CompassIcon icon-dots-horizontal OptionsIcon"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="add-board"
    >
      + Add board
    </div>
    <div
      class="SidebarSettingsMenu"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="menu-entry"
        >
          Settings
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarSidebar sidebar hidden 2`] = `
<div>
  <div
    class="Sidebar octo-sidebar hidden"
  >
    <div
      class="octo-sidebar-header show-button"
    >
      <div
        class="hamburger-icon"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="HamburgerIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="20,25 80,25"
            />
            <polyline
              points="20,50 80,50"
            />
            <polyline
              points="20,75 80,75"
            />
          </svg>
        </button>
      </div>
      <div
        class="show-icon"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="ShowSidebarIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="20,20 50,50 20,80"
            />
            <polyline
              points="50,20 80,50, 50,80"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarSidebar some categories hidden 1`] = `
<div>
  <div
    class="Sidebar octo-sidebar"
  >
    <div
      class="octo-sidebar-header"
    >
      <div
        class="heading"
      >
        <div
          class="SidebarUserMenu"
        >
          <div
            class="ModalWrapper"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="logo"
              >
                <div
                  class="logo-title"
                >
                  <svg
                    class="FocalboardLogoIcon Icon"
                    version="1.1"
                    viewBox="0 0 52.589677 64"
                    x="0px"
                    y="0px"
                  >
                    <path
                      d="m 33.071077,12.069805 c -12.663,-3.4670001 -27.0530002,3.289 -31.6760002,16.943 -4.655,13.75 2.719,28.67 16.4690002,33.325 13.75,4.655 28.67,-2.719 33.326,-16.469 3.804,-11.235 -0.462,-22.701 -8.976,-29.249 l -0.46,4.871 h -0.001 c 4.631,4.896 6.709,11.941 4.325,18.985 -3.362,9.931 -14.447,15.151 -24.76,11.66 -10.313,-3.49 -15.9480002,-14.37 -12.5870002,-24.301 2.9750002,-8.788 11.9980002,-13.715 20.7430002,-12.625 v -10e-4 z m -6.175,16.488 c 3.456,-0.665 6.986,2.754 5.762,6.37 -0.854,2.522 -3.67,3.85 -6.291,2.962 -2.62,-0.887 -4.052,-3.651 -3.197,-6.174 0.573,-1.697 2.034,-2.852 3.726,-3.158 z m -1.285,-4.944 c -1.786,0.323 -3.45,1.104 -4.812,2.258 -1.299,1.101 -2.319,2.545 -2.898,4.258 -0.879,2.597 -0.579,5.323 0.617,7.632 1.206,2.329 3.325,4.234 6.07,5.164 2.744,0.929 5.584,0.701 7.959,-0.417 2.352,-1.107 4.246,-3.091 5.125,-5.688 0.555,-1.639 0.633,-3.254 0.344,-4.761 -0.21,-1.093 -0.615,-2.134 -1.174,-3.091 l 1.019,-5.107 c 0.189,0.187 0.374,0.378 0.552,0.574 1.75,1.919 3.008,4.283 3.508,6.877 0.415,2.154 0.304,4.457 -0.484,6.784 -1.239,3.661 -3.898,6.453 -7.193,8.005 -3.273,1.541 -7.175,1.858 -10.93,0.588 -3.754,-1.271 -6.661,-3.895 -8.326,-7.108 -1.674,-3.233 -2.09,-7.065 -0.851,-10.728 0.819,-2.419 2.26,-4.46 4.097,-6.016 1.88,-1.593 4.181,-2.673 6.656,-3.125 l -0.001,-0.004 c 1.759,-0.339 3.522,-0.313 5.213,0.016 l -3.583,3.761 c -0.294,0.028 -0.588,0.071 -0.883,0.127 h -0.025 z"
                    />
                    <polygon
                      points="26.057,32.594 37.495,11.658 36.79,8.44 41.066,0.207 43.683,4.611 48.803,4.434 44.185,12.48 40.902,13.697 29.542,34.491 "
                      transform="translate(7.6780426e-5,-0.21919512)"
                    />
                  </svg>
                  <span>
                    Focalboard
                  </span>
                  <div
                    class="versionFrame"
                  >
                    <div
                      class="version"
                      title="v8.0.0"
                    >
                      v8.0.0
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-spacer"
      />
      <div
        class="sidebarSwitcher"
      >
        <button
          class="IconButton"
          type="button"
        >
          <svg
            class="HideSidebarIcon Icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="80,20 50,50 80,80"
            />
            <polyline
              points="50,20 20,50, 50,80"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="WorkspaceTitle"
    />
    <div
      class="BoardsSwitcherWrapper"
    >
      <div
        class="BoardsSwitcher"
      >
        <i
          class="CompassIcon icon-magnify MagnifyIcon"
        />
        <div>
          <span>
            Find Boards
          </span>
        </div>
      </div>
    </div>
    <div
      class="octo-sidebar-list"
      data-rbd-droppable-context-id="3"
      data-rbd-droppable-id="lhs-categories"
    >
      <div
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="category1"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="3"
            data-rbd-droppable-id="category1"
          >
            <div
              class="octo-sidebar-item category expanded "
            >
              <div
                aria-describedby="rbd-hidden-text-3-hidden-text-14"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="3"
                data-rbd-drag-handle-draggable-id="category1"
                draggable="false"
                role="button"
                tabindex="0"
                title="Category 1"
              >
                <i
                  class="CompassIcon icon-chevron-down ChevronDownIcon"
                />
                Category 1
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              data-rbd-draggable-context-id="3"
              data-rbd-draggable-id="board1"
            >
              <div
                aria-describedby="rbd-hidden-text-3-hidden-text-14"
                class="SidebarBoardItem subitem "
                data-rbd-drag-handle-context-id="3"
                data-rbd-drag-handle-draggable-id="board1"
                draggable="false"
                role="button"
                tabindex="0"
              >
                <div
                  class="octo-sidebar-icon"
                >
                  i
                </div>
                <div
                  class="octo-sidebar-title"
                  title="board title"
                >
                  board title
                </div>
                <div>
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper x"
                    role="button"
                  >
                    <button
                      class="IconButton"
                      type="button"
                    >
                      <i
                        class="CompassIcon icon-dots-horizontal OptionsIcon"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-rbd-draggable-context-id="3"
        data-rbd-draggable-id="categoryCollapsed"
      >
        <div
          class="SidebarCategory"
        >
          <div
            class="categoryBoardsDroppableArea"
            data-rbd-droppable-context-id="3"
            data-rbd-droppable-id="categoryCollapsed"
          >
            <div
              class="octo-sidebar-item category collapsed "
            >
              <div
                aria-describedby="rbd-hidden-text-3-hidden-text-14"
                class="octo-sidebar-title category-title"
                data-rbd-drag-handle-context-id="3"
                data-rbd-drag-handle-draggable-id="categoryCollapsed"
                draggable="false"
                role="button"
                tabindex="0"
                title="Category 2"
              >
                <i
                  class="CompassIcon icon-chevron-right ChevronRightIcon"
                />
                Category 2
                <div
                  class="sidebarCategoriesTour"
                />
              </div>
              <div
                class=""
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="add-board"
    >
      + Add board
    </div>
    <div
      class="SidebarSettingsMenu"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="menu-entry"
        >
          Settings
        </div>
      </div>
    </div>
  </div>
</div>
`;
